Adjust Config feature code structure.